# VulkanRenderer

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  CubemapOffscreenRender.cpp  CubemapOffscreenRender.hpp  CubemapTextureBlend.cpp  CubemapTextureBlend.hpp  ScopedOneTimeCommandBuffer.cpp  ScopedOneTimeCommandBuffer.hpp  VulkanCore.cpp  VulkanCore.hpp  WindowManager.cpp  WindowManager.hpp  build-debug.ps1  build-debug.sh  build.sh  conanfile.txt  main.cpp
shaders/: blend.frag  blend.vert  blend_frag.spv  frag.spv  offscreen.vert  offscreen_vert.spv  shader.frag  shader.vert  vert.spv
